welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: Missing closing brace `}' assumed here
def faireV(c:Color) {
^MethodsPicture:1: error: expected class or object definition
def faireV(c:Color) {
^