welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
def faireV(c:Color) {
  setCouleurBrosse(c:Color)
  avance() ; avance()
  Brosse() ; avance() ; gauche() ; avance() ; Brosse()
  recule() ; droite() ; avance() ; Brosse()
  avance() ; avance() ; gauche()


def fairecarre():
  faireV(Color.YELLOW) ; faireV(Color.RED) ; faireV(Color.BLUE) ; faireV(Color.GREEN)



















override def run() {
  fairecarre()
}